--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 kagglehub==0.3.12
 loguru==0.7.3
+nltk==3.9.1
+pandas==2.3.1
+PyPDF2==3.0.1
 python-dotenv==1.1.1
+Requests==2.32.5
+spacy==3.8.7
 tqdm==4.67.1
 typer==0.16.1
